// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/contentBlock return commentBlock and click on menuwrapper 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with commentBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with commentBlock readonly 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      />
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with dividerBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
      <div
        class="DividerElement"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with imageBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
      <img
        alt=""
        class="ImageElement"
        src="test.jpg"
        style="cursor: pointer;"
      />
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;

exports[`components/contentBlock should match snapshot with textBlock 1`] = `
<div>
  <div
    class="rowContents"
  >
    <div
      class="ContentBlock octo-block"
    >
      <div
        class="octo-block-margin"
      >
        <div
          aria-label="menuwrapper"
          class="MenuWrapper"
          role="button"
        >
          <button
            type="button"
          >
            <i
              class="CompassIcon icon-dots-horizontal OptionsIcon"
            />
          </button>
        </div>
        <div
          class="dnd-handle"
          draggable="true"
        >
          <svg
            class="GripIcon Icon"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
            />
          </svg>
        </div>
      </div>
      <div
        class="addToRow "
        style="flex: 0 0 auto; height: 100%;"
      />
      <div
        class="MarkdownEditor octo-editor  "
      >
        <div
          class="octo-editor-preview"
          data-testid="preview-element"
        />
      </div>
    </div>
    <div
      class="addToRow "
    />
  </div>
</div>
`;
